# gnosis

./: .gitignore  README.md  fixture.json  manage.py  package-lock.json  package.json  pyproject.toml  setup.sql
backend/: main.py  setup.sql
gnosisweb/: db.sqlite3  db.sqlite3.back  manage.py
gnosisweb/gnosisweb/: asgi.py  settings.py  urls.py  wsgi.py
gnosisweb/main/: admin.py  forms.py  models.py  urls.py  views.py
gnosisweb/main/migrations/: 0001_initial.py  0002_factset_name_alter_factset_id.py  0003_remove_factset_name.py  0004_factset_namekey.py  0005_template_name.py  0006_fieldcollection.py  0007_factsetschema_remove_factset_namekey_factset_name_and_more.py  0007_rename_fields_fieldcollection_alltemplatefields_and_more.py  0008_alter_factset_facts_alter_factsetschema_fields.py  0008_alter_template_id.py  0009_remove_template_field_collection.py  0009_rename_fields_factsetschema_schema.py  0010_remove_fieldcollection_alltemplatefields.py  0010_template_default_template_schema_rename_carton_card_and_more.py  0011_deck_name.py  0012_deck_description.py  0013_card_created_card_modified_deck_created_and_more.py
gnosisweb/main/templates/: adminpage.html  base.html  card.html  cardMaker.html  deck_detail.html  fillCartonModal.shtml  index.html  index.ts  quiz_done.html
gnosisweb/static_source/main/: styles.css
public/: addCardTemplate.html  addCardTemplate.js  classes.js  classes.ts  functions.ts  gnosis.db  popupWindows.js  reviewcards.html  reviewcards.js  styles.css  textFormattingFunctions.js  types.ts
src/: index.ts
toymodel/: classes.py
(+4 files in other folders)
